[package]
name = "te-telephony-rs"
version = "0.1.0"
authors = ["Charles Schleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "telephony"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
pjproject-sys = { git = "https://github.com/Charles-Schleich/pjproject-sys.git" } 
